WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235206
Sometimes cannot scroll after using internal trackpad
https://bugs.webkit.org/show_bug.cgi?id=235206
Summary
Sometimes cannot scroll after using internal trackpad
Tim Horton
Reported
2022-01-13 14:31:39 PST
Sometimes cannot scroll after using internal trackpad
Attachments
Patch
(2.11 KB, patch)
2022-01-13 14:32 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2022-01-13 14:32:24 PST
Created
attachment 449113
[details]
Patch
Tim Horton
Comment 2
2022-01-13 14:32:27 PST
<
rdar://problem/87274541
>
EWS
Comment 3
2022-01-13 15:45:39 PST
Committed
r287997
(
246024@main
): <
https://commits.webkit.org/246024@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 449113
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug