Cherry-pick r287997. rdar://problem/87274541

Sometimes cannot scroll after using internal trackpad
    https://bugs.webkit.org/show_bug.cgi?id=235206
    <rdar://problem/87274541>

    Reviewed by Simon Fraser.

    * WebProcess/WebPage/MomentumEventDispatcher.cpp:
    (WebKit::MomentumEventDispatcher::didStartMomentumPhase):
    (WebKit::MomentumEventDispatcher::setScrollingAccelerationCurve):
    * WebProcess/WebPage/MomentumEventDispatcher.h:
    We store std::optional<ScrollingAccelerationCurve> in a map, but then
    when looking at whether we have a curve (to decide whether or not to even
    use MomentumEventDispatcher), we check if the map has *any* value for the
    given page... even an unengaged optional. To fix, check if the optional is engaged.

    Canonical link: https://commits.webkit.org/246024@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287997 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.8@safari-613.1.14.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613.1.14.1-branch@288140 268f45cc-cd09-0410-ab3c-d52691b4dbfc